PROJECT( multisyncgui C )

SET( MSYNCTOOL_VERSION "0.36" )	

SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules" )

INCLUDE_DIRECTORIES(  ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ) 

SET( OPENSYNC_MIN_VERSION "0.36" )
FIND_PACKAGE( OpenSync REQUIRED )
FIND_PACKAGE( GTK REQUIRED )
FIND_PACKAGE( LibGlade REQUIRED )

MESSAGE( STATUS "FINDLIBGLADE: ${OPENSYNC_INCLUDE_DIRS}" )
MESSAGE( STATUS "FINDLIBGLADE: ${OPENSYNC_LIBRARY_DIRS}" )
MESSAGE( STATUS "FINDLIBGLADE: ${LIBGLADE_INCLUDE_DIR}" )
MESSAGE( STATUS "FINDLIBGLADE: ${LIBGLADE_LIBRARY_DIR}" )
MESSAGE( STATUS "FINDLIBGLADE: ${GTK_INCLUDE_DIRS}" )
MESSAGE( STATUS "FINDLIBGLADE: ${GTK_LIBRARY_DIRS}" )


IF ( NOT CMAKE_BUILD_TYPE )
	SET( CMAKE_BUILD_TYPE RelWithDebInfo )
ENDIF ( NOT CMAKE_BUILD_TYPE )

CONFIGURE_FILE( "config.h.cmake" "config.h" )

ADD_SUBDIRECTORY( src )

## Packaging

SET( CPACK_GENERATOR "TGZ;TBZ2" ) # This line is need for a CMake (Version 2.4.7) Bug - Fixed in CVS
SET( CPACK_SOURCE_GENERATOR "TGZ;TBZ2")
SET( CPACK_SOURCE_PACKAGE_FILE_NAME "msynctool-${MSYNCTOOL_VERSION}" )
INCLUDE( CPack )

