dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(multisync-0.90, 0.08)
AM_CONFIG_HEADER(config.h)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_LIBTOOL

XMLCFLAGS=`xml2-config --cflags`
XMLLDFLAGS=`xml2-config --libs`
AC_SUBST(XMLCFLAGS)
AC_SUBST(XMLLDFLAGS)

export PKG_CONFIG_PATH=${PKG_CONFIG_PATH}:/usr/lib/pkgconfig:/usr/local/lib/pkgconfig
pkg_modules="glib-2.0 libgnomeui-2.0 opensync-1.0 osengine-1.0"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

AC_OUTPUT([
Makefile
file-sync/Makefile
evolution2_sync/Makefile
evolution_sync/Makefile
])

