dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.58)
AC_INIT(configure.in)
AM_INIT_AUTOMAKE(multisync-0.90, 0.08)
AM_CONFIG_HEADER(config.h)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_LIBTOOL

XMLCFLAGS=`xml2-config --cflags`
XMLLDFLAGS=`xml2-config --libs`
AC_SUBST(XMLCFLAGS)
AC_SUBST(XMLLDFLAGS)

export PKG_CONFIG_PATH=${PKG_CONFIG_PATH}:/usr/lib/pkgconfig:$prefix/lib/pkgconfig:/usr/local/lib/pkgconfig
pkg_modules="glib-2.0 libgnomeui-2.0 opensync-1.0 osengine-1.0"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

OPENSYNC_HEADERDIR=$(pkg-config --variable=headerdir opensync-1.0)

AC_CHECK_HEADER(${OPENSYNC_HEADERDIR}/evo2_sync.h, EVO2_SYNC_DIR=evolution2_sync, EVO2_SYNC_DIR=)
AC_CHECK_HEADER(${OPENSYNC_HEADERDIR}/evo_sync.h, EVO_SYNC_DIR=evolution_sync, EVO_SYNC_DIR=)
AC_SUBST(EVO_SYNC_DIR)
AC_SUBST(EVO2_SYNC_DIR)
if test "x${EVO2_SYNC_DIR}" != "x"; then
	AC_DEFINE_UNQUOTED(ENABLE_EVO2, 1,[ENABLE_EVO2])
fi
if test "x${EVO_SYNC_DIR}" != "x"; then
	AC_DEFINE_UNQUOTED(ENABLE_EVO, 1,[ENABLE_EVO])
fi
AM_CONDITIONAL(EVO_SYNC_DIR, test "x${EVO_SYNC_DIR}" != "x")
AM_CONDITIONAL(EVO2_SYNC_DIR, test "x${EVO2_SYNC_DIR}" != "x")

AC_OUTPUT([
Makefile
file-sync/Makefile
evolution2_sync/Makefile
evolution_sync/Makefile
])

echo "==========================================="
echo "Building the gui for the following plugins:"
echo "File-sync Plugin"
echo "Kdepim Plugin"
if test "x${EVO2_SYNC_DIR}" != "x"; then
	echo "Evolution 2.0 Plugin"
fi
if test "x${EVO_SYNC_DIR}" != "x"; then
	echo "Evolution 1.4 Plugin"
fi
echo "==========================================="
