INCLUDE_DIRECTORIES( ${OPENSYNC_INCLUDE_DIRS} ${GTK_INCLUDE_DIRS} ${LIBGLADE_INCLUDE_DIRS})
LINK_DIRECTORIES( ${OPENSYNC_LIBRARY_DIRS} ${GTK_LIBRARY_DIRS} ${LIBGLADE_LIBRARY_DIRS})


MESSAGE( STATUS "FINDLIBGLADE: ${LINK_DIRECTORIES}" )
MESSAGE( STATUS "FINDLIBGLADE: ${INCLUDE_DIRECTORIES}" )

SET( multisyncgui_SRCS
	msync_callbacks.c
	msync_env.c
	msync_group.c
	msync_plugin.c
	msync_support.c
	multisyncgui.c
)

ADD_EXECUTABLE( multisyncgui ${multisyncgui_SRCS} )
TARGET_LINK_LIBRARIES( mulitsyncgui ${OPENSYNC_LIBRARIES} ${GTK_LIBRARIES} ${LIBGLADE_LIBRARIES})

###### INSTALL ################### 

INSTALL( TARGETS msynctool DESTINATION "${CMAKE_INSTALL_PREFIX}/bin" ) 
INSTALL( PROGRAMS msynctool.sh DESTINATION "${CMAKE_INSTALL_PREFIX}/etc/bash_completion.d" ) 

